--- a/sass/themes/schemas/components/light/_combo.scss
+++ b/sass/themes/schemas/components/light/_combo.scss
@@ -122,7 +122,7 @@ $light-combo: (
 
 /// Generates a material combo schema.
 /// @type {Map}
-/// @prop {Map} toggle-button-background-focus [color: ('gray', 400, .3)] - The combo toggle button background color when the combo is focused.
+/// @prop {Map} toggle-button-background-focus [color: ('gray', 400)] - The combo toggle button background color when the combo is focused.
 /// @prop {Color} clear-button-background-focus [transparent] - The combo clear button background color when the combo is focused.
 /// @prop {Map} toggle-button-foreground-disabled [color: ('gray', 500)] - The combo toggle button foreground color when the combo is disabled.
 /// @requires {Map} $light-combo
@@ -133,7 +133,6 @@ $material-combo: extend(
             color: (
                 'gray',
                 400,
-                0.3,
             ),
         ),
         clear-button-background-focus: transparent,
